Solves form title overlap problem #419

--- a/src/styles/form-editor/form-editor.css
+++ b/src/styles/form-editor/form-editor.css
@@ -167,3 +167,9 @@
   display: flex;
   flex-direction: row;
 }
+
+.form-content {
+  width: 60%;
+  position: fixed;
+  left: 20%;
+}
